fixed flights from area